--- a/BubberDinner.Infrastructure/BubberDinner.Infrastructure.csproj
+++ b/BubberDinner.Infrastructure/BubberDinner.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\BubberDinner.Application\BubberDinner.Application.csproj" />    
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
