Refactor the token generator using configuration settings.

--- a/BubberDinner.Api/appsettings.json
+++ b/BubberDinner.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Secret": "Supper-Secret_erinrfeworwerji_243u3renwadf",
+    "ExpiryMinutes": 60,
+    "Issuer": "BubberDinner",
+    "Audience": "BubberDinner"
+  }
 }
