Implement repository pattern

--- a/BubberDinner.Api/BubberDinner.Api.csproj
+++ b/BubberDinner.Api/BubberDinner.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>f2107d0d-7d8e-4fb3-8f43-b602b8f2c3c8</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
