--- a/BubberDinner.Api/appsettings.json
+++ b/BubberDinner.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "JwtSettings": {
-    "Secret": "Supper-Secret_erinrfeworwerji_243u3renwadf",
+    "Secret": "",
     "ExpiryMinutes": 60,
     "Issuer": "BubberDinner",
     "Audience": "BubberDinner"
