--- a/BubberDinner.Domain/BubberDinner.Domain.csproj
+++ b/BubberDinner.Domain/BubberDinner.Domain.csproj
@@ -4,5 +4,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="ErrorOr" Version="1.0.0" />
+  </ItemGroup>
 
 </Project>
